Fix about mobile to be visible again, and fix padding so it is readable

--- a/src/api/overlays/components/overlay-component.scss
+++ b/src/api/overlays/components/overlay-component.scss
@@ -71,7 +71,7 @@
     outline: none;
     overflow: auto;
     body.mobile & {
-      flex: none;
+      display: flex;
     }
   }
 
